k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iskaar
  labels:
    app.kubernetes.io/name: iskaar
    app.kubernetes.io/component: namespace
    app.kubernetes.io/part-of: iskaar
